[package]
name = "hangout-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.5.0", features = ["full"]}
warp = "0.3.1"

lazy_static = "1.4.0"
regex = "1.5.4"
uuid = {version = "0.8.2", features = ["serde", "v4"]}
validator = {version = "0.13.0", features = ["derive"]}

anyhow = "1.0.40"
thiserror = "1.0.24"

async-graphql = {version = "2.9.12", features = ["chrono", "uuid", "apollo_tracing", "log"]}
async-graphql-warp = "2.9.12"

async-trait = "0.1.50"

chrono = {version = "0.4.19", features = ["serde"]}
humantime = "2.1.0"
humantime-serde = "1.0.1"

config = "0.11.0"
dotenv = "0.15.0"

jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.3"

log = "0.4.14"
log4rs = {version = "1.0.0", features = ["toml_format"]}

serde = "1.0.126"
serde-aux = "2.2.0"
serde_json = "1.0.64"


sqlx = {version = "0.5.2", features = ["runtime-tokio-native-tls", "uuid", "postgres", "chrono"]}